# zero2prod

./: Cargo.toml  README.md
.github/workflows/: general.yml
migrations/: 20240520175810_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs
src/routes/: subscriptions.rs
tests/: health_checks.rs
