[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
cargo-audit = "0.20.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
